MB-71194 - Fix location and size of query plan tool tips
There were two related problems:

1) The tooltip vertical size could be unbounded, especially in the
case of "Project" nodes for queries with many explicitly specified
fields. The tooltip size could easily exceed the vertical size of the
window.

2) By default the tooltip's top left corner is the location where the
user clicked, even if that meant that much of the tooltip would be off
the bottom of the screen.

This fix adds scrollbars to the tooltip, and ensures that tooltip's
top is never so low as to cause the bottom of the tooltip to go off
the screen.

Reviewed-on: https://review.couchbase.org/c/query-ui/+/242542
Well-Formed: Restriction Checker
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/ui-current/query.css
+++ b/query-ui/ui-current/query.css
@@ -168,8 +168,12 @@ textarea.ng-invalid-number {
 
 /* styles for D3-based query explain plan ---------------------------------- */
 .wb-explain-summary {
+  display: flex;
+  align-items: flex-start;
   font-size: .75rem;
   padding: .25rem 1rem;
+  max-height: 3rem;
+  overflow: clip;
 }
 .wb-explain-summary .column {
   flex-grow: 1;
@@ -186,7 +190,7 @@ textarea.ng-invalid-number {
 }
 .wb-explain-d3-wrapper, .wb-results-chart {
   width: 100%;
-  height: 100%;
+  height: calc(100% - 3.5rem);
   position: relative;
   font-family: OpenSans;
 }
@@ -288,6 +292,8 @@ marker {
   border-top: solid .25rem #4287d6;
   box-shadow: 0px 5px 14px 2px rgba(0,0,0,0.14);
   min-width: 200px;
+  overscroll-behavior: contain;
+  overflow-wrap: anywhere;
   z-index: 10;
 }
 .wb-explain-tooltip h5 {
